# ch347_qt

./: .gitignore  CMakeLists.txt  README.md
assets/: main.qrc
src/: main.cpp
src/components/config/: base_config.cpp  base_config.h  config.cpp  config.h  font_config.cpp  font_config.h
src/components/theme/: theme.cpp  theme.h
src/components/utils/: bytes.h  utils.c  utils.h
src/main_window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/views/: about_view.cpp  about_view.h  about_viewiew.ui  main_view.cpp  main_view.h  main_view.ui  settings_view.cpp  settings_view.h  settings_view.ui
